{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 25,
  "lineage": "8db27a07-ec03-c541-a924-87cd24f5ed13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035239771933:internet-gateway/igw-0ba7920c35f9bda33",
            "id": "igw-0ba7920c35f9bda33",
            "owner_id": "035239771933",
            "region": "us-east-1",
            "tags": {
              "Name": "lambda-container-demo-igw"
            },
            "tags_all": {
              "Name": "lambda-container-demo-igw"
            },
            "vpc_id": "vpc-03ae145b5ff757908"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035239771933:route-table/rtb-0d718c2b09f6cfb13",
            "id": "rtb-0d718c2b09f6cfb13",
            "owner_id": "035239771933",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba7920c35f9bda33",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lambda-container-demo-public-rt"
            },
            "tags_all": {
              "Name": "lambda-container-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ae145b5ff757908"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb7e32f2865501e8",
            "region": "us-east-1",
            "route_table_id": "rtb-0d718c2b09f6cfb13",
            "subnet_id": "subnet-04c3c30a16ad7a0dd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035239771933:security-group/sg-02ab67106816877b3",
            "description": "Allow Lambda outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ab67106816877b3",
            "ingress": [],
            "name": "lambda-container-demo-lambda-sg",
            "name_prefix": "",
            "owner_id": "035239771933",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-container-demo-sg"
            },
            "tags_all": {
              "Name": "lambda-container-demo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ae145b5ff757908"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035239771933:subnet/subnet-04c3c30a16ad7a0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c3c30a16ad7a0dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "035239771933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "lambda-container-demo-public-subnet"
            },
            "tags_all": {
              "Name": "lambda-container-demo-public-subnet"
            },
            "vpc_id": "vpc-03ae145b5ff757908"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035239771933:vpc/vpc-03ae145b5ff757908",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0447e855424a49424",
            "default_route_table_id": "rtb-0a6a94a3ef5109973",
            "default_security_group_id": "sg-04af1e39d8f4e24fe",
            "dhcp_options_id": "dopt-0be801501fe88aefb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ae145b5ff757908",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6a94a3ef5109973",
            "owner_id": "035239771933",
            "region": "us-east-1",
            "tags": {
              "Name": "lambda-container-demo-vpc"
            },
            "tags_all": {
              "Name": "lambda-container-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}